RESOLVED FIXED 106849
[Microdata] propertiesCollection[name] should return undefined if item doesn't have a property named 'name'
https://bugs.webkit.org/show_bug.cgi?id=106849
Summary [Microdata] propertiesCollection[name] should return undefined if item doesn'...
Arko Saha
Reported 2013-01-14 17:53:56 PST
Test: <html> <body> <div id="myDiv" itemscope><div itemprop="bar"> </div></div> <script type="text/javascript"> alert(document.getElementById("myDiv").properties['foo']); </script> </body> </html> Expected: Should return undefined. Actual: Returns [object PropertyNodeList] This issue is observed in chromium port only.
Attachments
Patch (4.58 KB, patch)
2013-01-14 18:01 PST, Arko Saha
no flags
Arko Saha
Comment 1 2013-01-14 18:01:53 PST
Kentaro Hara
Comment 2 2013-01-15 01:20:07 PST
Comment on attachment 182671 [details] Patch Looks good.
WebKit Review Bot
Comment 3 2013-01-15 10:50:41 PST
Comment on attachment 182671 [details] Patch Clearing flags on attachment: 182671 Committed r139756: <http://trac.webkit.org/changeset/139756>
WebKit Review Bot
Comment 4 2013-01-15 10:50:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.