Microdata: propertiesCollection[name] should return undefined if item doesn't have a property named 'name' https://bugs.webkit.org/show_bug.cgi?id=106849

Reviewed by Kentaro Hara.

Source/WebCore:

We should return undefined if hasNamedItem() is false.

Test: fast/dom/MicroData/properties-collection-namedgetter-with-invalid-name.html

* bindings/v8/custom/V8HTMLCollectionCustom.cpp:
(WebCore::V8HTMLCollection::namedPropertyGetter):

LayoutTests:

* fast/dom/MicroData/properties-collection-namedgetter-with-invalid-name-expected.txt: Added.
* fast/dom/MicroData/properties-collection-namedgetter-with-invalid-name.html: Added.


Canonical link: https://commits.webkit.org/125139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139756 268f45cc-cd09-0410-ab3c-d52691b4dbfc